correction titre nowrap

--- a/src/components/InfoSection/InfoSection.css
+++ b/src/components/InfoSection/InfoSection.css
@@ -21,7 +21,6 @@
     color: rgb(255, 96, 96);
     font-size: 36px;
     margin: 2.5px 0;
-    white-space: nowrap;
 }
 
 .slideshow_div1>h1+p,
